# pybind11-template

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
src/bind/: bind.cpp  bind_eigen.hpp
src/mypackage/: __main__.py
